HtmlUi: - fixed layout issues with FormFieldLayout

--- a/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/form/fields/FormField.css
+++ b/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/form/fields/FormField.css
@@ -6,18 +6,18 @@
 }
 
 .form-field > label {
-  display:inline-block;
+  position:absolute;
   text-overflow:ellipsis;
   overflow:hidden;
   max-width:130px;
 }
 
 .form-field > span.status {
-  display:inline-block;
+  position:absolute;
 }
 
 .form-field > .field {
-  display:inline-block;
+  position:absolute;
 }
 
 /* Form-Fields */
